build/log/idf_py_stderr_output_617703
/home/laloc/esp/projects_tf/person_detection/main/uart_communication.c:42:6: error: conflicting types for 'uart_receive_data'; have 'void(char *)'
   42 | void uart_receive_data(char* received_command) {
      |      ^~~~~~~~~~~~~~~~~
In file included from /home/laloc/esp/projects_tf/person_detection/main/uart_communication.c:1:
/home/laloc/esp/projects_tf/person_detection/main/uart_communication.h:10:6: note: previous declaration of 'uart_receive_data' with type 'void(void)'
   10 | void uart_receive_data(void);
      |      ^~~~~~~~~~~~~~~~~
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:188: esp-idf/main/CMakeFiles/__idf_main.dir/uart_communication.c.obj] Error 1
make[3]: *** Waiting for unfinished jobs....
In file included from /home/laloc/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/micro/tflite_bridge/flatbuffer_conversions_bridge.h:19,
                 from /home/laloc/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/micro/micro_allocator.h:26,
                 from /home/laloc/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/micro/micro_interpreter.h:26,
                 from /home/laloc/esp/projects_tf/person_detection/main/main_functions.cc:6:
/home/laloc/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/core/api/flatbuffer_conversions.h: In member function 'T* tflite::BuiltinDataAllocator::AllocatePOD()':
/home/laloc/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/core/api/flatbuffer_conversions.h:46:24: warning: 'template<class _Tp> struct std::is_pod' is deprecated: use 'is_standard_layout && is_trivial' instead [-Wdeprecated-declarations]
   46 |     static_assert(std::is_pod<T>::value, "Builtin data structure must be POD.");
      |                        ^~~~~~
In file included from /home/laloc/esp/idf-tools/tools/xtensa-esp-elf/esp-14.2.0_20240906/xtensa-esp-elf/xtensa-esp-elf/include/c++/14.2.0/bits/stl_pair.h:60,
                 from /home/laloc/esp/idf-tools/tools/xtensa-esp-elf/esp-14.2.0_20240906/xtensa-esp-elf/xtensa-esp-elf/include/c++/14.2.0/utility:69,
                 from /home/laloc/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/core/c/common.h:1463,
                 from /home/laloc/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/c/common.h:31,
                 from /home/laloc/esp/projects_tf/person_detection/main/detection_responder.h:22,
                 from /home/laloc/esp/projects_tf/person_detection/main/main_functions.cc:2:
/home/laloc/esp/idf-tools/tools/xtensa-esp-elf/esp-14.2.0_20240906/xtensa-esp-elf/xtensa-esp-elf/include/c++/14.2.0/type_traits:890:5: note: declared here
  890 |     is_pod
      |     ^~~~~~
/home/laloc/esp/projects_tf/person_detection/main/main_functions.cc: In function 'void loop()':
/home/laloc/esp/projects_tf/person_detection/main/main_functions.cc:136:27: error: 'BUF_SIZE' was not declared in this scope; did you mean 'BUFSIZ'?
  136 |     char received_command[BUF_SIZE] = {0};
      |                           ^~~~~~~~
      |                           BUFSIZ
/home/laloc/esp/projects_tf/person_detection/main/main_functions.cc:139:23: error: 'received_command' was not declared in this scope
  139 |     uart_receive_data(received_command);
      |                       ^~~~~~~~~~~~~~~~
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:118: esp-idf/main/CMakeFiles/__idf_main.dir/main_functions.cc.obj] Error 1
make[2]: *** [CMakeFiles/Makefile2:5867: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:2521: CMakeFiles/flash.dir/rule] Error 2
make: *** [Makefile:286: flash] Error 2
